[gd_scene load_steps=20 format=3 uid="uid://dl2cvk41250sk"]

[ext_resource type="Theme" uid="uid://bhid78ber0sik" path="res://assets/fonts/font_theme.tres" id="1_05p07"]
[ext_resource type="Texture2D" uid="uid://b43jtejofuyuh" path="res://assets/backgrounds/bg_pause.png" id="1_cr101"]
[ext_resource type="Script" uid="uid://dh51mqj3vg4er" path="res://scripts/settings_menu.gd" id="1_lwwgp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wswnh"]
bg_color = Color(0.917647, 0.678431, 0.929412, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.917647, 0.678431, 0.929412, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cr101"]
bg_color = Color(0.658824, 0.517647, 0.952941, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_labj1"]
bg_color = Color(0.658824, 0.517647, 0.952941, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lwwgp"]
bg_color = Color(0.658824, 0.517647, 0.952941, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n0fy7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jpbdv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_puhno"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gdgfw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_75x6d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x0dr5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cr101"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wswnh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_labj1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lwwgp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bgjg7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_48ojb"]

[node name="settingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lwwgp")

[node name="TextureRect" type="TextureRect" parent="." groups=["background"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("1_cr101")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_05p07")

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="rootBoxContainer" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="title" type="Label" parent="Panel/Margin/rootBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.117647, 0.737255, 0.45098, 1)
theme_override_font_sizes/font_size = 28
text = "SETTINGS"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/Margin/rootBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="Content" type="VBoxContainer" parent="Panel/Margin/rootBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 14
alignment = 1

[node name="audioSection" type="VBoxContainer" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content"]
layout_mode = 2

[node name="audioLabel" type="Label" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/audioSection"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.984314, 0.419608, 0.113725, 1)
text = "AUDIO"

[node name="musicSection" type="HBoxContainer" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/audioSection"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 14

[node name="musicLabel" type="Label" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/audioSection/musicSection"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music"

[node name="musicSlider" type="HSlider" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/audioSection/musicSection"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
focus_neighbor_top = NodePath("../../../../../backButton")
focus_neighbor_bottom = NodePath("../../sfxSection/sfxSlider")
theme_override_styles/slider = SubResource("StyleBoxFlat_wswnh")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_cr101")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_labj1")
value = 80.0

[node name="sfxSection" type="HBoxContainer" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/audioSection"]
layout_mode = 2
theme_override_constants/separation = 33

[node name="sfxLabel" type="Label" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/audioSection/sfxSection"]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX"

[node name="sfxSlider" type="HSlider" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/audioSection/sfxSection"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
focus_neighbor_top = NodePath("../../musicSection/musicSlider")
focus_neighbor_bottom = NodePath("../../../accessibilitySection/languageSection/langOption")
theme_override_styles/slider = SubResource("StyleBoxFlat_wswnh")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_cr101")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_lwwgp")
value = 80.0

[node name="accessibilitySection" type="VBoxContainer" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content"]
layout_mode = 2

[node name="accessLabel" type="Label" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/accessibilitySection"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.984314, 0.419608, 0.113725, 1)
text = "ACCESSIBILITY"

[node name="languageSection" type="HBoxContainer" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/accessibilitySection"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="langLabel" type="Label" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/accessibilitySection/languageSection"]
layout_mode = 2
size_flags_horizontal = 3
text = "Language"

[node name="langOption" type="OptionButton" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/accessibilitySection/languageSection"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../../audioSection/sfxSection/sfxSlider")
focus_neighbor_bottom = NodePath("../../../../../backButton")
theme_override_colors/font_color = Color(0.658824, 0.517647, 0.952941, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_n0fy7")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_jpbdv")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_puhno")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_gdgfw")
theme_override_styles/hover = SubResource("StyleBoxEmpty_75x6d")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_x0dr5")
selected = 0
item_count = 1
popup/item_0/text = "English"
popup/item_0/id = 0

[node name="controlsSection" type="VBoxContainer" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content"]
layout_mode = 2

[node name="controlsLabel" type="Label" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/controlsSection"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.984314, 0.419608, 0.113725, 1)
text = "CONTROLS"

[node name="controlsColumns" type="HBoxContainer" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/controlsSection"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 32
alignment = 1

[node name="labels" type="VBoxContainer" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/controlsSection/controlsColumns"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="move" type="Label" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/controlsSection/controlsColumns/labels"]
layout_mode = 2
size_flags_vertical = 3
text = "Move:"
autowrap_mode = 3

[node name="jump" type="Label" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/controlsSection/controlsColumns/labels"]
layout_mode = 2
size_flags_vertical = 3
text = "Jump:"
autowrap_mode = 3

[node name="changeColor" type="Label" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/controlsSection/controlsColumns/labels"]
layout_mode = 2
size_flags_vertical = 3
text = "Change color:"
autowrap_mode = 3

[node name="shoot" type="Label" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/controlsSection/controlsColumns/labels"]
layout_mode = 2
size_flags_vertical = 3
text = "Shoot:"
autowrap_mode = 3

[node name="pause" type="Label" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/controlsSection/controlsColumns/labels"]
layout_mode = 2
size_flags_vertical = 3
text = "Menu / Pause:"
autowrap_mode = 3

[node name="enter" type="Label" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/controlsSection/controlsColumns/labels"]
layout_mode = 2
size_flags_vertical = 3
text = "Accept:"
autowrap_mode = 3

[node name="controls" type="VBoxContainer" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/controlsSection/controlsColumns"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="move2" type="Label" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/controlsSection/controlsColumns/controls"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.658824, 0.517647, 0.952941, 1)
text = "A / D or ← →"
autowrap_mode = 3

[node name="jump2" type="Label" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/controlsSection/controlsColumns/controls"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.658824, 0.517647, 0.952941, 1)
text = "W or ↑"
autowrap_mode = 3

[node name="changeColor2" type="Label" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/controlsSection/controlsColumns/controls"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.658824, 0.517647, 0.952941, 1)
text = "Z / K"
autowrap_mode = 3

[node name="shoot" type="Label" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/controlsSection/controlsColumns/controls"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.658824, 0.517647, 0.952941, 1)
text = "X / J"
autowrap_mode = 3

[node name="pause" type="Label" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/controlsSection/controlsColumns/controls"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.658824, 0.517647, 0.952941, 1)
text = "ESC"
autowrap_mode = 3

[node name="enter" type="Label" parent="Panel/Margin/rootBoxContainer/ScrollContainer/Content/controlsSection/controlsColumns/controls"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.658824, 0.517647, 0.952941, 1)
text = "SPACE / ENTER"
autowrap_mode = 3

[node name="backButton" type="Button" parent="Panel/Margin/rootBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../ScrollContainer/Content/accessibilitySection/languageSection/langOption")
focus_neighbor_bottom = NodePath("../ScrollContainer/Content/audioSection/musicSection/musicSlider")
theme_override_colors/font_hover_pressed_color = Color(0.117647, 0.737255, 0.45098, 1)
theme_override_colors/font_hover_color = Color(0.117647, 0.737255, 0.45098, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.117647, 0.737255, 0.45098, 1)
theme_override_colors/font_pressed_color = Color(0.117647, 0.737255, 0.45098, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_cr101")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_wswnh")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_labj1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lwwgp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_bgjg7")
theme_override_styles/normal = SubResource("StyleBoxEmpty_48ojb")
text = "BACK"

[connection signal="value_changed" from="Panel/Margin/rootBoxContainer/ScrollContainer/Content/audioSection/musicSection/musicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Panel/Margin/rootBoxContainer/ScrollContainer/Content/audioSection/sfxSection/sfxSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="Panel/Margin/rootBoxContainer/backButton" to="." method="_on_back_button_pressed"]
